# routes/userRoutes.js
@@ -1,0 +1,13 @@
+import express from 'express';
+
+import { createUser, deleteUser, getUserById, updateUser } from '../controllers/userController.js';
+import { authenticateToken } from '../middleware/auth.js';
+
+const router = express.Router();
+
+router.post('/', createUser);
+router.get('/:id', authenticateToken, getUserById);
+router.put('/:id', authenticateToken, updateUser);
+router.delete('/:id', authenticateToken, deleteUser);
+
+export default router;
